code commit@rahul
bug resolution of master form

--- a/src/main/resources/templates/layouts/Master/serviceCategory.html
+++ b/src/main/resources/templates/layouts/Master/serviceCategory.html
@@ -111,7 +111,7 @@
 													<div class="form-group col-md-6">
 														<label class="form-label">Category Type</label> <label
 															style="color: red">*</label> <select class="form-control"
-															id="" title="This field is required" required>
+															id="" title="This field is required" th:field="*{categoryType}" required>
 
 															<option value="S">Sales</option>
 															<option value="J">Journal</option>
