--- a/src/main/resources/templates/layouts/editview/editItem.html
+++ b/src/main/resources/templates/layouts/editview/editItem.html
@@ -81,7 +81,7 @@
 																	<label for="#">Item Code</label> <input type="text"
 																		class="form-control form-control-sm" readonly
 																		title="item code" placeholder="Item Code"
-																		th:field="*{itemCode}">
+																		th:field="*{itemCode}" readonly>
 																</div>
 																<div class="form-group col-md-8">
 																	<label for="inputPassword4">Description</label>
