--- a/src/main/resources/templates/layouts/Master/StoreMaster.html
+++ b/src/main/resources/templates/layouts/Master/StoreMaster.html
@@ -118,9 +118,8 @@
 													</div>
 
 													<div class="form-group col-md-12">
-														<label class="form-label">Status</label> <label
-															style="color: red">*</label> <select class="form-control"
-															id="" title="status" th:field="*{storeStatus}" required>
+														<label class="form-label">Status</label>  <select class="form-control"
+															id="" title="status" th:field="*{storeStatus}" >
 
 
 															<option value="F" selected>Functional</option>
