--- a/src/main/resources/templates/layouts/Master/categoryMaster.html
+++ b/src/main/resources/templates/layouts/Master/categoryMaster.html
@@ -115,9 +115,8 @@
 													</div>
 
 													<div class="form-group col-md-6">
-														<label class="form-label">Account Head</label> <label
-															style="color: red">*</label> <select class="form-control"
-															id="" th:field="*{accountHead}"  title="account head" required>
+														<label class="form-label">Account Head</label>  <select class="form-control"
+															id="" th:field="*{accountHead}"  title="account head" >
 															<option value="">Select</option>
 															<option value="1">type-1</option>
 															<option value="2">type-2</option>
