--- a/src/main/resources/templates/layouts/Master/partyMaster.html
+++ b/src/main/resources/templates/layouts/Master/partyMaster.html
@@ -116,7 +116,7 @@
 																<label for="inputAddress">Party Code</label><span
 																	style="color: red">*</span> <input type="text"
 																	class="form-control" placeholder="Party Code"
-																	title="party code" th:field="*{partyCode}" readonly>
+																	title="party code" th:field="*{partyTypCode}" readonly>
 															</div>
 															<div class="form-group col-md-4">
 																<label for="inputEmail4">Name</label><span
@@ -194,7 +194,7 @@
 															</div>
 
 															<div class="form-group col-md-4">
-																<label for="inputPassword4">Country</label><<select class="form-control"
+																<label for="inputPassword4">Country</label><select class="form-control"
 																	id="departmentDropdown" title="Department Name"
 																	th:field="*{countryCode}">
 																	<option value="">Select</option>
