--- a/src/main/resources/templates/layouts/editview/editCategory.html
+++ b/src/main/resources/templates/layouts/editview/editCategory.html
@@ -84,9 +84,8 @@
 													</div>
 
 													<div class="form-group col-md-6">
-														<label class="form-label">Acount Head</label> <label
-															style="color: red">*</label> <select class="form-control"
-															id="" title="type" th:field="*{accountHead}" required>
+														<label class="form-label">Account Head</label><select class="form-control"
+															id="" title="type" th:field="*{accountHead}" >
 															<option value="">Select</option>
 															<option value="1">type-1</option>
 															<option value="2">type-2</option>
